picasso dependencies added.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.yildiztarik.stegochat"
-        minSdk 23
+        minSdk 28
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -30,15 +30,16 @@ android {
 }
 
 dependencies {
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-<<<<<<< HEAD
+
     implementation 'com.google.firebase:firebase-database:20.0.4'
-=======
     implementation 'com.google.firebase:firebase-auth-ktx:22.0.0'
->>>>>>> firebase_auth
+    implementation 'com.google.firebase:firebase-storage:20.2.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
